[TG-191] Fix alignment of remove button for actions and conditions (#57)
* [TG-191] Fix alignment of remove button for actions and conditions

* [TG-191] Minor styling fix

--- a/src/app/scenarios/scenario-details/wizard/scenario-wizard/scenario-wizard.scss
+++ b/src/app/scenarios/scenario-details/wizard/scenario-wizard/scenario-wizard.scss
@@ -28,3 +28,17 @@ a {
 .material-icons {
     cursor: pointer;
 }
+
+.icon-wrapper {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+}
+
+.remove-wrapper {
+    height: 80px;
+    position: relative;
+}
+
+
